# downlink

./: .gitignore  LICENSE  README.md  downlink_docs.md  latest.json  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
app/: globals.css  page.tsx  types.ts
app/components/: AdvancedOptions.tsx  AppUpdater.tsx  QueueItem.tsx  SettingsModal.tsx
app/hooks/: useDownlink.ts
docs/: AUTO_UPDATES.md  SETUP.md  index.html
scripts/: build.ps1  build.sh
src/: tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  download_manager.rs  events.rs  lib.rs  models.rs  settings.rs  tool_manager.rs  url_utils.rs  ytdlp.rs
